User home page gap fixed and admin partials set but css linking problem still exist

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -415,8 +415,21 @@
 
 
 /* MDC stuff */
+
+
+
+
+
+
 .mdc-bottom-navigation {
     height: 56px;
+    /* border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px; */
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+
+
+
     background-color: var(--mdc-theme-background, #fff);
     width: 100%;
     box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12);
